tests/invalid/definite/Subtype_CompileFail_7.whiley
define int where $ < 0 as scf7nat

void System::main([string] args):
    (scf7nat f) x = (f:-1)
    x.f = x.f + 1
    
